# CNN_HLS

./: README.MD
CPP/: CMakeLists.txt
CPP/include/: Conv1_weights.h  Conv2_weights.h  Conv3_weights.h  Perceptron.h  convolution.h  image_processing.h  images.h  last_stage_net.h  macros.h  maxpool.h
CPP/src/: Image_processing.cpp  ImgProcTest.cpp  convolution.cpp  last_stage_net.cpp  main.cpp  maxpool.cpp
Diff_error/: CMakeLists.txt  CNN_Design.cpp  CNN_Design.h  Conv1_weights.h  Conv2_weights.h  Conv3_weights.h  Image_processing.cpp  Perceptron.h  Ref_Conv1_weights.h  Ref_Conv2_weights.h  Ref_Conv3_weights.h  Ref_Perceptron.h  Reference_design.cpp  Reference_design.h  TB_design_test.cpp  convolution.cpp  convolution.h  data_types.h  disp_hls.cpp  image_processing.h  images.h  last_stage_net.cpp  last_stage_net.h  maxpool.cpp  maxpool.h  ref_images.h
Diff_error/outFiles/: MAXP_3_out_1ref.txt  conv1_out.txt  conv1_out02.txt  conv1_out1.txt  conv1_out_casted.txt  conv1_out_maybe.txt  conv1_outx.txt  conv_2_out_1ref.txt  conv_2_out_1x.txt  conv_3_out_1.txt  conv_3_out_1ref.txt  mapx_2_out_1.txt  mapx_2_out_1ref.txt  maxpool_out_1ref.txt  maxpool_out_1x.txt  perceptron_out.txt  (+4 more)
FPGA/: bkp_system_wrapper.bit
HLS/: my_hls_18.pgm
PYTHON/: Convolutions.py  Extracting_Weights.py  Images_processing.py  Maxpoolings.py  Network_Tests.py  Reshape_percetrons.py
PY_scripts/: Drari_maxpool.py  Ext2_Mtrx_Files.py  Extracting_weights.py  cmp_cpp.py  colv_relu_valid.py  comp_drari.py  conv2_ones.py  final_test.py  gen_acfixed_parameters.py  image_processing.py  max_pool.py
(+66 files in other folders)
